cart исправила кнопку-ссылку

--- a/cart.html
+++ b/cart.html
@@ -127,8 +127,7 @@
                 </div>
                 <div class="cart-buttons">
                     <div class="cart-btn cart-btn__shopping"><!-- <button type="reset"></button> -->CLEAR SHOPPING CART</div>
-                    <div class="cart-btn"><a href="catalog.html">CONTINUE SHOPPING</a></div>
-                    
+                    <a class="cart-btn" href="catalog.html">CONTINUE SHOPPING</a>
                 </div>
             </div>
             <div class="content-cart__address">
