--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     
                 </div>
 
-                <a class="no-mobile heading__rigth_a-img" href="#"><img class="heading__rigth_img-hover" src="img/logo_account.svg" width="29" height="29"></a>
+                <a class="no-mobile heading__rigth_a-img" href="registration.html"><img class="heading__rigth_img-hover" src="img/logo_account.svg" width="29" height="29"></a>
 
                 <a class="no-mobile heading__rigth_a-img" href="cart.html"><img class="heading__rigth_img-hover" src="img/logo_basket.svg" width="32" height="29"></a>
             </nav>
