адаптив для планшета. дз 5

--- a/cart.html
+++ b/cart.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hw_3_cart</title>
+    <title>cart</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,31 +30,31 @@
                         <h3 class="nav-burger__tytle">MENU</h3>
                         <div class="nav-burger__box">
                             <ul>
-                                <li class="nav-burger__subject"><a href="catalog.html"></a>MAN
+                                <li><a class="nav-burger__subject" href="catalog.html">MAN</a>
                                     <ul>
-                                        <li class="nav-burger__link"><a href="#"></a>Accessories</li>
-                                        <li class="nav-burger__link"><a href="#"></a>Bags</li>
-                                        <li class="nav-burger__link"><a href="#"></a>Denim</li>
-                                        <li class="nav-burger__link"><a href="#"></a>T-Shitrs</li>
+                                        <li><a class="nav-burger__link" href="catalog.html">Accessories</a></li>
+                                        <li><a class="nav-burger__link" href="catalog.html">Bags</a></li>
+                                        <li><a class="nav-burger__link" href="catalog.html">Denim</a></li>
+                                        <li><a class="nav-burger__link" href="catalog.html">T-Shitrs</a></li>
                                     </ul>
                                 </li>
-                                <li class="nav-burger__subject"><a href="catalog.html"></a>WOMEN
+                                <li><a class="nav-burger__subject" href="catalog.html">WOMEN</a>
                                     <ul>
-                                        <li class="nav-burger__link"><a href="#"></a>Accessories</li>
-                                        <li class="nav-burger__link"><a href="#"></a>Jackets & Coats</li>
-                                        <li class="nav-burger__link"><a href="#"></a>Polos</li>
-                                        <li class="nav-burger__link"><a href="#"></a>T-Shirts</li>
-                                        <li class="nav-burger__link"><a href="#"></a>Shirts</li>
+                                        <li><a class="nav-burger__link" href="catalog.html">Accessories</a></li>
+                                        <li><a class="nav-burger__link" href="catalog.html">Jackets & Coats</a></li>
+                                        <li><a class="nav-burger__link" href="catalog.html">Polos</a></li>
+                                        <li><a class="nav-burger__link" href="catalog.html">T-Shirts</a></li>
+                                        <li><a class="nav-burger__link" href="catalog.html">Shirts</a></li>
                                     </ul>
                                 </li>
-                                <li class="nav-burger__subject"><a href="catalog.html"></a>KIDS
+                                <li><a class="nav-burger__subject" href="catalog.html">KIDS</a>
                                     <ul>
-                                        <li class="nav-burger__link"><a href="#"></a>Accessories</li>
-                                        <li class="nav-burger__link"><a href="#"></a>Jackets & Coats</li>
-                                        <li class="nav-burger__link"><a href="#"></a>Polos</li>
-                                        <li class="nav-burger__link"><a href="#"></a>T-Shirts</li>
-                                        <li class="nav-burger__link"><a href="#"></a>Shirts</li>
-                                        <li class="nav-burger__link"><a href="#"></a>Bags</li>
+                                        <li><a class="nav-burger__link" href="catalog.html">Accessories</a></li>
+                                        <li><a class="nav-burger__link" href="catalog.html">Jackets & Coats</a></li>
+                                        <li><a class="nav-burger__link" href="catalog.html">Polos</a></li>
+                                        <li><a class="nav-burger__link" href="catalog.html">T-Shirts</a></li>
+                                        <li><a class="nav-burger__link" href="catalog.html">Shirts</a></li>
+                                        <li><a class="nav-burger__link" href="catalog.html">Bags</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -81,7 +81,7 @@
                         <div class="cart-product">
                             <img class="cart-product__img" src="img/prod_3.png" alt="prod_photo">
                             <div class="cart-product__info">
-                                <a href="#" class="cart-product__header">MANGO   PEOPLE   <br>T-SHIRT</a>
+                                <a href="product.html" class="cart-product__header">MANGO   PEOPLE   <br>T-SHIRT</a>
                                 <div class="cart-product__items">
                                     <div class="cart-product__flex">
                                         <p class="cart-product__text">Price:</p>
@@ -104,7 +104,7 @@
                         <div class="cart-product">
                             <img class="cart-product__img" src="img/prod_7.png" alt="prod_photo">
                             <div class="cart-product__info">
-                                <a href="#" class="cart-product__header">MANGO   PEOPLE   <br>T-SHIRT</a>
+                                <a href="product.html" class="cart-product__header">MANGO   PEOPLE   <br>T-SHIRT</a>
                                 <div class="cart-product__items">
                                     <div class="cart-product__flex">
                                         <p class="cart-product__text">Price:</p>
@@ -168,25 +168,7 @@
 
         </section>
 
-        <footer>
-            <section class="advantages center">
-                <article class="advantages__item">
-                    <img width="45" src="img/advant1.svg" alt="image advantages" class="advantages__img">
-                    <h3 class="advantages__title">Free Delivery</h3>
-                    <p class="advantages__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
-                </article>
-                <article class="advantages__item">
-                    <img width="40" src="img/advant2.svg" alt="image advantages" class="advantages__img">
-                    <h3 class="advantages__title">Sales & discounts</h3>
-                    <p class="advantages__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
-                </article>
-                <article class="advantages__item">
-                    <img width="47" src="img/advant3.svg" alt="image advantages" class="advantages__img">
-                    <h3 class="advantages__title">Quality assurance</h3>
-                    <p class="advantages__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
-                </article>
-            </section>
-    
+        <footer>    
             <div class="subscription-background">
                 <section class="subscription center">
                     <figure class="figure">
