--- a/cart.html
+++ b/cart.html
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="content-cart__address">
-                <div class="address">
+                <form class="address">
                     <h3 class="address__heading">SHIPPING ADRESS</h3>
                     <div class="address__input">
                         <input class="address__item address__item_color" type="text" placeholder="Bangladesh">
@@ -139,7 +139,7 @@
                         <input class="address__item" type="text" placeholder="Postcode / Zip">
                     </div>
                     <button class="cart-btn cart-btn__address" type="submit">GET A QUOTE</button>
-                </div>
+                </form>
                 <div class="checkout">
                     <div class="checkout__total">
                         <div class="checkout__flex">
@@ -156,16 +156,6 @@
                     </div>
                 </div>
             </div>
-    
-            <!-- <div class="cart-product__flex">
-                <p class="cart-product__text">Price:</p>
-                <span class="cart-product__text cart-product__text_price">$300</span>
-            </div> -->
-
-
-
-
-
         </section>
 
         <footer>    
