внесла корректировки после валидатора

--- a/catalog.html
+++ b/catalog.html
@@ -63,9 +63,9 @@
                     
                 </div>
 
-                <a class="no-mobile heading__rigth_a-img" href="registration.html"><img class="heading__rigth_img-hover" src="img/logo_account.svg" width="29" height="29"></a>
+                <a class="no-mobile heading__rigth_a-img" href="registration.html"><img class="heading__rigth_img-hover" src="img/logo_account.svg" width="29" height="29" alt="registration"></a>
 
-                <a class="no-mobile heading__rigth_a-img" href="cart.html"><img class="heading__rigth_img-hover" src="img/logo_basket.svg" width="32" height="29"></a>
+                <a class="no-mobile heading__rigth_a-img" href="cart.html"><img class="heading__rigth_img-hover" src="img/logo_basket.svg" width="32" height="29" alt="cart"></a>
             </nav>
             
         </header>
